--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </nav>
     <div class="container">
         <h2>Welcome to our website</h2>
-        <p>This is a basic example of an HTML and CSS website. You can customize it to add more content and style as per your requirements.</p>
+        <p>This is a basic example of an HTML and CSS website. You can customize it to add more content and style as per your requirements. I am adding this text 
+            to test if the deployment is working correctly.
+        </p>
     </div>
     <footer>
         &copy; 2023 Your Website. All rights reserved.
